--- a/schedule/pom.xml
+++ b/schedule/pom.xml
@@ -51,6 +51,11 @@
 			<artifactId>protobuf-java</artifactId>
 			<version>2.4.0a</version>
 		</dependency>
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>${fastjson.version}</version>
+		</dependency>
 		<!-- <dependency> -->
 		<!-- <groupId>org.apache.hadoop</groupId> -->
 		<!-- <artifactId>hadoop-common</artifactId> -->
