migu first commit

--- a/web/src/main/filter/prod.properties
+++ b/web/src/main/filter/prod.properties
@@ -1,6 +1,6 @@
 #环境配置，用来标记环境，可以配合Environment使用
 zeus.env=online
-zeus.loggingRoot=/data/applogs/zeus/
+zeus.loggingRoot=/mnt/sdb1/zeus/logs
 zeus.loggingLevel=debug
 #默认worker的host组id
 zeus.defaultWorkerGroup.id=1
@@ -34,7 +34,7 @@ noc.notifyUrl=""
 noc.accessToken=""
 
 #任务执行文件夹，每次任务都会在此文件夹下新建一个临时文件夹
-zeus.localdata.dir=/data/zeus/job_dir
+zeus.localdata.dir=/mnt/sdb1/zeus/job_dir
 #此处必须是hdfs路径，所有的上传附件都会存放在下面路径上
 zeus.hdfsLibPath=/zeus/hdfs-upload-dir
 
@@ -68,6 +68,6 @@ dos2unix.exclude.file=jar
 #deployenv=product
 #zkserver=10.252.106.1:2181,10.252.115.52:2181,10.252.104.46:2181
 
-ds.zeus-m1-write.jdbc.url=jdbc:mysql://10.118.80.127:3306/zeus?createDatabaseIfNotExist=true&amp;useSSL=false&amp;useUnicode=true&amp;characterEncoding=utf-8&amp;autoReconnect=true&amp;autoReconnectForPools=true
-ds.zeus-m1-write.jdbc.username=root
-ds.zeus-m1-write.jdbc.password=root
+ds.zeus-m1-write.jdbc.url=jdbc:mysql://zeus.mysql.db.migu:55944/zeusdb?createDatabaseIfNotExist=true&amp;useSSL=false&amp;useUnicode=true&amp;characterEncoding=utf-8&amp;autoReconnect=true&amp;autoReconnectForPools=true
+ds.zeus-m1-write.jdbc.username=m_zeus
+ds.zeus-m1-write.jdbc.password=9RgfXVvGhARVOycSb11M
