--- a/web/src/main/filter/dev.properties
+++ b/web/src/main/filter/dev.properties
@@ -38,6 +38,6 @@ dos2unix.exclude.file=jar
 deployenv=qa
 zkserver=192.168.199.13:2181,192.168.199.14:2181,192.168.199.15:2181
 
-ds.zeus-m1-write.jdbc.url=jdbc:mysql://10.118.80.127:3306/zeus?createDatabaseIfNotExist=true&amp;useUnicode=true&amp;characterEncoding=utf-8&amp;autoReconnect=true&amp;autoReconnectForPools=true
+ds.zeus-m1-write.jdbc.url=jdbc:mysql://localhost:3306/zeus?createDatabaseIfNotExist=true&amp;useUnicode=true&amp;characterEncoding=utf-8&amp;autoReconnect=true&amp;autoReconnectForPools=true&amp;useSSL=false
 ds.zeus-m1-write.jdbc.username=root
 ds.zeus-m1-write.jdbc.password=root
