--- a/web/src/main/filter/prod.properties
+++ b/web/src/main/filter/prod.properties
@@ -22,11 +22,11 @@ zeus.scanExceptionRate=500
 
 #邮件发送的相关配置
 
-email.host=smtp.126.com
-email.port=25
-email.username=dufu0401@126.com
-email.password=test
-email.sendFrom=dufu0401@126.com
+email.host=10.200.71.124
+email.port=1025
+email.username=18721295159@139.com
+email.password=xiaofu@YD
+email.sendFrom=18721295159@139.com
 
 #Noc报警的相关配置l
 ###测试
