--- a/web/src/main/filter/dev.properties
+++ b/web/src/main/filter/dev.properties
@@ -29,6 +29,8 @@ hive.conf.dir=/etc/hive/conf
 #不需要dos2unix转换的文件类型
 dos2unix.exclude.file=jar
 
+kerberos.auth=true
+
 ####
 #db.url=jdbc:mysql://192.168.199.36:3306/zeus_lky1?createDatabaseIfNotExist=true&amp;useUnicode=true&amp;characterEncoding=utf-8&amp;autoReconnect=true&amp;autoReconnectForPools=true
 #db.username=root
