--- a/web/src/main/filter/prod.properties
+++ b/web/src/main/filter/prod.properties
@@ -59,6 +59,9 @@ hive.conf.dir=/etc/hive/conf
 #不需要dos2unix转换的文件类型
 dos2unix.exclude.file=jar
 
+#执行hive是否需要kerberos认证
+kerberos.auth=true
+
 ####数据库连接
 #db.url=jdbc:mysql://10.168.156.64:3306/zeus?createDatabaseIfNotExist=true&amp;useUnicode=true&amp;characterEncoding=utf-8&amp;autoReconnect=true&amp;autoReconnectForPools=true
 #db.username=dwadmin
