--- a/web/src/main/filter/dev.properties
+++ b/web/src/main/filter/dev.properties
@@ -1,6 +1,8 @@
 #环境配置，用来标记环境，可以配合Environment使用
 zeus.env=dev
 zeus.loggingRoot=/data/applogs/zeus/log
+#临时文件文件夹
+zeus.tempWorkPath=/mnt/sdb1/zeus/temp
 zeus.loggingLevel=debug
 
 #任务执行文件夹，每次任务都会在此文件夹下新建一个临时文件夹
@@ -30,6 +32,7 @@ hive.conf.dir=/etc/hive/conf
 dos2unix.exclude.file=jar
 
 kerberos.auth=true
+kerberos.user=hadoop
 
 ####
 #db.url=jdbc:mysql://192.168.199.36:3306/zeus_lky1?createDatabaseIfNotExist=true&amp;useUnicode=true&amp;characterEncoding=utf-8&amp;autoReconnect=true&amp;autoReconnectForPools=true
