--- a/web/src/main/filter/prod.properties
+++ b/web/src/main/filter/prod.properties
@@ -1,6 +1,8 @@
 #环境配置，用来标记环境，可以配合Environment使用
 zeus.env=online
 zeus.loggingRoot=/mnt/sdb1/zeus/logs
+#临时文件文件夹
+zeus.tempWorkPath=/mnt/sdb1/zeus/temp
 zeus.loggingLevel=debug
 #默认worker的host组id
 zeus.defaultWorkerGroup.id=1
@@ -61,6 +63,7 @@ dos2unix.exclude.file=jar
 
 #执行hive是否需要kerberos认证
 kerberos.auth=true
+kerberos.user=hadoop
 
 ####数据库连接
 #db.url=jdbc:mysql://10.168.156.64:3306/zeus?createDatabaseIfNotExist=true&amp;useUnicode=true&amp;characterEncoding=utf-8&amp;autoReconnect=true&amp;autoReconnectForPools=true
