add safe delete path

--- a/web/src/main/filter/prod.properties
+++ b/web/src/main/filter/prod.properties
@@ -37,6 +37,8 @@ noc.accessToken=""
 
 #任务执行文件夹，每次任务都会在此文件夹下新建一个临时文件夹
 zeus.localdata.dir=/mnt/sdb1/zeus/job_dir
+#zeus有权删除的文件夹
+zeus.safe.delete.dir=rm\\s+-rf\\s+/mnt/sdb1/zeus/,rm\\s+-rf\\s+/mnt/bd00/,rm\\s+-rf\\s+/mnt/bd01/,rm\\s+-rf\\s+/mnt/bd02/,rm\\s+-rf\\s+/mnt/cdmp_out/,rm\\s+-rf\\s+/mnt/cdmp_new/,rm\\s+-rf\\s+/mnt/share_partner/
 #此处必须是hdfs路径，所有的上传附件都会存放在下面路径上
 zeus.hdfsLibPath=/zeus/hdfs-upload-dir
 
