--- a/web/src/main/filter/antx.properties
+++ b/web/src/main/filter/antx.properties
@@ -2,6 +2,10 @@
 zeus.env=online
 zeus.loggingRoot=/Users/lowry/zeus/log
 zeus.loggingLevel=debug
+#默认worker的host组id
+zeus.defaultWorkerGroup.id=1
+#抢占master的host组id
+zeus.preemptionMasterGroup.id=1
 
 #任务执行文件夹，每次任务都会在此文件夹下新建一个临时文件夹
 zeus.localdata.dir=/data/zeus/job_dir
