--- a/web/src/main/filter/dev.properties
+++ b/web/src/main/filter/dev.properties
@@ -4,6 +4,10 @@ zeus.loggingRoot=/data/applogs/zeus/log
 #临时文件文件夹
 zeus.tempWorkPath=/mnt/sdb1/zeus/temp
 zeus.loggingLevel=debug
+#默认worker的host组id
+zeus.defaultWorkerGroup.id=1
+#抢占master的host组id
+zeus.preemptionMasterGroup.id=1
 
 #任务执行文件夹，每次任务都会在此文件夹下新建一个临时文件夹
 zeus.localdata.dir=/data/zeus/job_dir
