add daily job rely hourly job

--- a/web/src/main/filter/dev.properties
+++ b/web/src/main/filter/dev.properties
@@ -31,6 +31,7 @@ hadoop.conf.dir=/etc/hadoop/conf
 #hive 配置文件路径
 hive.home=/usr/lib/hive
 hive.conf.dir=/etc/hive/conf
+hive.beeline.shell=beeline -u 'jdbc:hive2://10.200.60.114:10003/default;principal=hive/ddp-cm.cmdmp.com@CMDMP.COM'
 
 #不需要dos2unix转换的文件类型
 dos2unix.exclude.file=jar
