--- a/web/src/main/filter/prod.properties
+++ b/web/src/main/filter/prod.properties
@@ -74,6 +74,6 @@ kerberos.user=hadoop
 #deployenv=product
 #zkserver=10.252.106.1:2181,10.252.115.52:2181,10.252.104.46:2181
 
-ds.zeus-m1-write.jdbc.url=jdbc:mysql://zeus.mysql.db.migu:55944/zeusdb?createDatabaseIfNotExist=true&amp;useSSL=false&amp;useUnicode=true&amp;characterEncoding=utf-8&amp;autoReconnect=true&amp;autoReconnectForPools=true
+ds.zeus-m1-write.jdbc.url=jdbc:mysql://zeus.mysql.db:55944/zeusdb?createDatabaseIfNotExist=true&amp;useSSL=false&amp;useUnicode=true&amp;characterEncoding=utf-8&amp;autoReconnect=true&amp;autoReconnectForPools=true
 ds.zeus-m1-write.jdbc.username=m_zeus
 ds.zeus-m1-write.jdbc.password=9RgfXVvGhARVOycSb11M
