--- a/web/src/main/filter/rp.properties
+++ b/web/src/main/filter/rp.properties
@@ -1,14 +1,44 @@
 #环境配置，用来标记环境，可以配合Environment使用
 zeus.env=online
-zeus.loggingRoot=/data/applogs/zeus/
+zeus.loggingRoot=/tmp/zeus/logs
+#临时文件文件夹
+zeus.tempWorkPath=/tmp/zeus/temp
 zeus.loggingLevel=debug
 #默认worker的host组id
 zeus.defaultWorkerGroup.id=1
 #抢占master的host组id
 zeus.preemptionMasterGroup.id=1
 
+#worker 被选中作为执行节点的条件  begin
+#已使用内存占总内存的最大比例,默认0.8
+zeus.maxMemRate=0.8
+#cpu load per core等于最近1分钟系统的平均cpu负载÷cpu核心数量，默认3.0
+zeus.cpuLoadPerCore=3.0
+#队列扫描频率(毫秒)
+zeus.scanRate=500
+#worker节点最大同时运行的任务数量
+zeus.worker.tasks.max=10
+#worker 被选中作为执行节点的条件  end
+#异常队列扫描频率(毫秒)
+zeus.scanExceptionRate=500
+
+#邮件发送的相关配置
+
+email.host=10.200.71.124
+email.port=1025
+email.username=18721295159@139.com
+email.password=xiaofu@YD
+email.sendFrom=18721295159@139.com
+
+#Noc报警的相关配置l
+###测试
+noc.notifyUrl=""
+noc.accessToken=""
+
 #任务执行文件夹，每次任务都会在此文件夹下新建一个临时文件夹
-zeus.localdata.dir=/data/zeus/job_dir
+zeus.localdata.dir=/tmp/zeus/job_dir
+#zeus有权删除的文件夹
+zeus.safe.delete.dir=rm\\s+-rf\\s+/mnt/sdb1/zeus/,rm\\s+-rf\\s+/mnt/bd00/,rm\\s+-rf\\s+/mnt/bd01/,rm\\s+-rf\\s+/mnt/bd02/,rm\\s+-rf\\s+/mnt/cdmp_out/,rm\\s+-rf\\s+/mnt/cdmp_new/,rm\\s+-rf\\s+/mnt/share_partner/
 #此处必须是hdfs路径，所有的上传附件都会存放在下面路径上
 zeus.hdfsLibPath=/zeus/hdfs-upload-dir
 
@@ -21,6 +51,7 @@ zeus.jobtracker=
 
 #zk配置非必选，可以为空，此处的zk是用来通知任务的成功失败事件的
 zeus.zookeeper.host=
+
 #hadoop 配置文件路径
 hadoop.home=/usr/lib/hadoop
 hadoop.conf.dir=/etc/hadoop/conf
@@ -28,17 +59,24 @@ hadoop.conf.dir=/etc/hadoop/conf
 #hive 配置文件路径
 hive.home=/usr/lib/hive
 hive.conf.dir=/etc/hive/conf
+hive.beeline.shell=beeline -u 'jdbc:hive2://10.200.60.114:10003/default;principal=hive/ddp-cm.cmdmp.com@CMDMP.COM'
 
 #不需要dos2unix转换的文件类型
 dos2unix.exclude.file=jar
 
+#执行hive是否需要kerberos认证
+kerberos.auth=true
+kerberos.user=hadoop
+
 ####数据库连接
-#db.url=jdbc:mysql://10.168.156.64:3306/report_center?createDatabaseIfNotExist=true&amp;useUnicode=true&amp;characterEncoding=utf-8&amp;autoReconnect=true&amp;autoReconnectForPools=true
+#db.url=jdbc:mysql://10.168.156.64:3306/zeus?createDatabaseIfNotExist=true&amp;useUnicode=true&amp;characterEncoding=utf-8&amp;autoReconnect=true&amp;autoReconnectForPools=true
 #db.username=dwadmin
 #db.password=fYvm&amp;ef#!m8n2
 
 ####Lion地址
 #deployenv=product
 #zkserver=10.252.106.1:2181,10.252.115.52:2181,10.252.104.46:2181
-deployenv=qa
-zkserver=192.168.199.13:2181,192.168.199.14:2181,192.168.199.15:2181
+
+ds.zeus-m1-write.jdbc.url=jdbc:mysql://10.200.65.71:3306/zeus?createDatabaseIfNotExist=true&amp;useSSL=false&amp;useUnicode=true&amp;characterEncoding=utf-8&amp;autoReconnect=true&amp;autoReconnectForPools=true
+ds.zeus-m1-write.jdbc.username=root
+ds.zeus-m1-write.jdbc.password=123456
